# functional-snake-game

./: .gitignore  README.md
Haskell/SnakeGame.hsproj/: .uuid
Haskell/SnakeGame.hsproj/SnakeGame/: Core.hs  Input.hs  Main.hs  SnakeGame.cabal  UI.hs
JavaScript/: index.js  package-lock.json  package.json
JavaScript/src/: helper.js  input.js  snake.js  ui.js
TypeScript/: LICENSE  package-lock.json  package.json  tslint.json
TypeScript/src/: core.ts  game.ts  input.ts  snake.ts  ui.ts
